Fixes #227 - Displays collapsible filters on small screens. Opens & disables filter collapsing on medium screens and larger.

--- a/frontend/src/app/search/search.component.scss
+++ b/frontend/src/app/search/search.component.scss
@@ -46,7 +46,14 @@ button {
   border: none;
 }
 
+mat-expansion-panel, mat-accordion {
+  width: 100%;
+  margin-bottom: 1em;
+}
+
+
 .filters {
+
   #reset-filters {
     color: $brand-accent;
     font-weight: bold;
