--- a/frontend/src/stardrive_material.scss
+++ b/frontend/src/stardrive_material.scss
@@ -43,18 +43,18 @@
     // XS
     @media (max-width: 575px) {
       .row {
-        padding-left: 2em;
-        padding-right: 2em;
-        max-width: 90%;
+        padding-left: 1em;
+        padding-right: 1em;
+        max-width: 100vw;
       }
     }
 
     // SM
     @media (min-width: 576px) {
       .row {
-        max-width: 90%;
-        padding-left: 0;
-        padding-right: 0;
+        max-width: 100vw;
+        padding-left: 2em;
+        padding-right: 2em;
       }
     }
 
@@ -273,11 +273,12 @@
   #hero.with-escaping-tiles {
     margin-bottom: ($tile-height-1x * 0.5);
 
+    &.margin-bottom-none   { margin-bottom: ($tile-height-1x * 0.25); }
     .row.escaping-tiles-1x { margin-bottom: -($tile-height-1x * 0.5); }
     .row.escaping-tiles-2x { margin-bottom: -($tile-height-2x * 0.75); }
 
-    @media (max-width: 576px) {
-      height: 200px;
+    @media (max-width: 967px) {
+      height: 250px;
 
       .mat-form-field-appearance-outline .mat-form-field-label {
         margin-top: 0.1em;
@@ -288,13 +289,13 @@
       }
 
       .mat-form-field-appearance-outline .mat-form-field-outline {
-        background-color: white;
+        background-color: rgba(255, 255, 255, 0.5);
         opacity: 1;
         border-radius: 5px;
       }
 
       :hover .mat-form-field-appearance-outline .mat-form-field-outline {
-        background-color: white;
+        background-color: rgba(255, 255, 255, 0.5);
         opacity: 1;
       }
     }
@@ -310,9 +311,8 @@
   .pad-7 { padding: 7em; }
   .pad-8 { padding: 8em; }
 
-  .margin-top-none, .row.margin-top-none       { margin-top: 0px; }
-  .margin-bottom-none, .row.margin-bottom-none { margin-bottom: 0px; }
-
+  .margin-top-none, .row.margin-top-none        { margin-top: 0px; }
+  .margin-bottom-none, .row.margin-bottom-none  { margin-bottom: 0px; }
   .ghost { opacity: 0; }
 
 }
